--- a/illustrisAPI/dmVelDisp.ipynb
+++ b/illustrisAPI/dmVelDisp.ipynb
@@ -171,6 +171,7 @@
     "\n",
     "import requests\n",
     "import h5py\n",
+    "\n",
     "import bokeh.plotting as blt\n",
     "import bokeh\n",
     "bokeh.io.output_notebook()"
@@ -686,7 +687,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
