--- a/web/code/post_disperse_data.ipynb
+++ b/web/code/post_disperse_data.ipynb
@@ -14,7 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import random\n",
-    "import data_subroutines.distance_functions as df"
+    "import subroutines.distance as df"
    ]
   },
   {
